removed frequently accessed questions and changed announcements section

--- a/index.html
+++ b/index.html
@@ -372,12 +372,12 @@
                                                         </a>
                                                     </div>
                                                 </div>
-                                                <div class="announcement-sec">
+                                                <!-- <div class="announcement-sec">
                                                     <div class="content">
                                                         <h2>Announcements</h2>
                                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non enim. orem hendrerit facilisis sit amet ut leo. Nam rhoncus nisl facilisis, pellentesque urna dignissim, imperdiet nisl. Nulla facilisi. </p>
                                                     </div>
-                                                </div>
+                                                </div> -->
                                             </div>
                                             <!-- <div class="hero-area">
                                                 <div class="Hero-section">
@@ -423,7 +423,7 @@
                                             <div class="last-row">
                                                 <div class="flexxed">
                                                     <!-- FAQs -->
-                                                    <div class="frequently-accessed">
+                                                    <!-- <div class="frequently-accessed">
                                                         <div class="heading">
                                                             <h2>Frequently Accessed</h2>
                                                             <div class="line"></div>
@@ -484,6 +484,13 @@
                                                                 </div>
                                                             </div>
                                                         </div>
+                                                    </div> -->
+                                                    <!-- Announcements -->
+                                                     <div class="announcement-sec">
+                                                        <div class="content">
+                                                            <h2>Announcements</h2>
+                                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non enim. orem hendrerit facilisis sit amet ut leo. Nam rhoncus nisl facilisis, pellentesque urna dignissim, imperdiet nisl. Nulla facilisi. </p>
+                                                        </div>
                                                     </div>
                                                     <!-- Document box -->
                                                     <div class="documents-box square-box">
@@ -527,7 +534,7 @@
                             </form>
                         </div>
                     </div> -->
-                    <div class="footer">
+                    <!-- <div class="footer">
                         <div class="footer-content">
                             <div class="footer-Links">
                                 <div class="row">
@@ -557,7 +564,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- <section class="related_wrap related_wrap_empty"></section> -->
                 </div>
             </div>
