--- a/infotech - department-landing-page.html
+++ b/infotech - department-landing-page.html
@@ -11,7 +11,7 @@
       <!-- Navbar -->
       <div class="navbar">
           <div class="left">
-                <img src="./images/logo/logo-transparent.png">
+                <img src="./images/logo/foulath-infotech.jpg">
                 <h1>FoulathHeading</h1> 
           </div>
           <div class="right">
@@ -390,6 +390,85 @@
           </div>
       </div>
     </div>
+
+     <!-- Brand colors -->
+     <style>
+      .wrapping .navbar{
+        background-color: #00214D;
+      }
+      .wrapping .page-content .departments-menu .square {
+          background-color: #A5C5ED;
+          color: white;
+      }
+      .wrapping .page-content .departments-menu .square:hover{
+        background-color: #95B1D5;
+      }
+      .suggestion-btn {
+        background-color: #A5C5ED;
+        color: white;
+      }
+
+      .suggestion-btn:hover {
+        background-color: #95B1D5;
+      }
+
+      .time-in {
+        background-color: #00214D;
+      }
+
+      .task-box-container{
+        background-color: #E6E9ED;
+      }
+
+      .card-title {
+        background: #00214D;
+        color: white;
+      }
+
+      .task-id {
+        color: #00214D;
+      }
+
+      .announcements-header {
+        color: #00214D;
+      }
+
+      .announcements-box {
+        background-color: #00214D;
+        color: white;
+        border-top: 1px solid #ccc;
+      }
+
+      .event-div .events-header a{
+          color: #00214D;
+      }
+
+      .vote-box .btn-container button{
+        background-color: #00214D;
+        color: white;
+      }
+
+      .vote-box .btn-container button:hover{
+        background-color: #001E45;
+      }
+
+      .event-source {
+        color: #00214D;
+      }
+
+      .documents-header a {
+          color: #00214D;
+        }
+
+      .document-card .doc-info .doc-source{
+          color: #95B1D5;
+        }
+
+        .calendar-table td.selected {
+          background-color: #00214D;
+          color: white;
+        }
+     </style>
      <!--js-->
      <script>
   const calendarHeader = document.querySelector("#calendar-month-year");
