--- a/infotech - department-page.html
+++ b/infotech - department-page.html
@@ -417,7 +417,45 @@
 </div>
 
 <div class="custom_html_section"></div>
+<style>
+    .top_panel_over .top_panel_wrap,
+    .menu_main_wrap,
+    .current_day {
+        background-color: #00214D;
+        color: white;
+    }
+    .table-head{
+        background-color: #95B1D5;
+    }
+    .column .request-title .date{
+        color: #00214D;
+    }
+    .table-head h3 {
+        color: #00214D;
+        font-weight: bold;
+    }
+    .quick-links h2{
+        color: #00214D;
+    }
+    .blue-box{
+        background-color: #A5C5ED;
+    }
+    .announcement-sec{
+        background-color: #95B1D5;
+        color: white;
+    }
+    .announcement-sec h2{
+        color: #00214D;
+    }
+    .documents-box a{
+        color: #00214D;
+    }
+    .search-box input::placeholder {
+        color: white; /* Change this to your desired color */
+        opacity: 0.7; /* Ensures full opacity */
+    }
 
+</style>
 <script type='text/javascript' src='js/vendor/jquery/jquery.js'></script>
 <script type='text/javascript' src='js/vendor/jquery/jquery-migrate.min.js'></script>
 <script type='text/javascript' src='js/custom/custom.js'></script>
