--- a/Sulb - department-landing-page.html
+++ b/Sulb - department-landing-page.html
@@ -16,6 +16,10 @@
           </div>
           <div class="right">
                 <button>Private Group</button>
+                <!-- Notification btn -->
+                <a href="#">
+                  <img src="./images/bell 3.png" style="width: 17px; height: 18px; margin-right: 15px;"> 
+                </a>
                 <div class="profile">
                     <img src="./images/user.png">
                     <a href="#">3 members</a>
