fixed notification and time in

--- a/BHSteel - department-landing-page.html
+++ b/BHSteel - department-landing-page.html
@@ -106,7 +106,10 @@
                       <!-- Header area -->
                       <div class="tasks-header">
                         <button class="suggestion-btn">Employee’s suggestion scheme</button>
-                        <span class="time-in">8:00 AM</span>
+                        <span class="time-in">
+                          TIME IN <br>
+                          8:00 AM
+                        </span>
                       </div>
                     <div class="task-box-container">
                       <!-- Card -->
