--- a/foulath - department-landing-page.html
+++ b/foulath - department-landing-page.html
@@ -18,7 +18,7 @@
                 <button>Private Group</button>
                 <!-- Notification btn -->
                 <a href="#">
-                  <img src="./images/bell 3.png" style="width: 17px; height: 18px; margin-right: 15px;"> 
+                  <img src="./images/bell 3.png" style="width: 17px; height: 18px; margin-right: 15px;filter: brightness(0) saturate(100%) invert(100%);"> 
                 </a>
                 <div class="profile">
                     <img src="./images/user.png">
@@ -106,7 +106,10 @@
                       <!-- Header area -->
                       <div class="tasks-header">
                         <button class="suggestion-btn">Employee’s suggestion scheme</button>
-                        <span class="time-in">8:00 AM</span>
+                        <span class="time-in">
+                          TIME IN <br>
+                          8:00 AM
+                        </span>
                       </div>
                     <div class="task-box-container">
                       <!-- Card -->
