--- a/foulath - department-page.html
+++ b/foulath - department-page.html
@@ -67,10 +67,12 @@
                                                     <div class="flexxed-2">
                                                         <!-- Pending tasks -->
                                                         <div class="request-table">
-                                                            <div class="table-head">
-                                                                <h3 class="request-title-heading">PENDING TASKS</h3>
-                                                                <h3 class="approver-heading"></h3>
-                                                            </div>
+                                                            <a href="#" class="task-card-link-grey">
+                                                                <div class="table-head">
+                                                                    <h3 class="request-title-heading">PENDING TASKS</h3>
+                                                                    <h3 class="approver-heading"></h3>
+                                                                </div>
+                                                            </a>
                                                             <div class="table-columns">
                                                                 <div class="column">
                                                                     <div class="request-title">
@@ -179,10 +181,12 @@
                                                         </div>
                                                         <!-- request table -->
                                                         <div class="request-table">
-                                                            <div class="table-head">
-                                                                <h3 class="request-title-heading">MY REQUESTS</h3>
-                                                                <h3 class="approver-heading"></h3>
-                                                            </div>
+                                                            <a href="#" class="task-card-link-grey">
+                                                                <div class="table-head">
+                                                                    <h3 class="request-title-heading">MY REQUESTS</h3>
+                                                                    <h3 class="approver-heading"></h3>
+                                                                </div>
+                                                            </a>
                                                             <div class="table-columns">
                                                                 <div class="column">
                                                                     <div class="request-title">
