--- a/foulath - department-landing-page.html
+++ b/foulath - department-landing-page.html
@@ -203,6 +203,11 @@
                     We will be conducting scheduled maintenance on our primary servers this Saturday from 12:00 AM to 4:00 AM EST.
                     During this time, services may be temporarily unavailable.
                   </p>
+                  <div class="expiry-date">
+                    <div class="line"></div>
+                    <span>Expires on:</span>
+                    <span class="date">Nov 30, 2024</span>
+                </div>
                 </div>
               </div>
            </div>
