fixed responsiveness + removed private group btn

--- a/BHSteel - department-landing-page.html
+++ b/BHSteel - department-landing-page.html
@@ -15,7 +15,7 @@
                 <h1>FoulathHeading</h1> 
           </div>
           <div class="right">
-                <button>Private Group</button>
+                <!-- <button>Private Group</button> -->
                 <!-- Notification btn -->
                 <a href="#">
                   <img src="./images/bell 3.png" style="width: 17px; height: 18px; margin-right: 15px;"> 
