removed grey from sulb colors

--- a/Sulb - department-landing-page.html
+++ b/Sulb - department-landing-page.html
@@ -423,12 +423,12 @@
         background-color: #1E317D;
       }
       .suggestion-btn {
-        background-color: #C1C2C4;
+        background-color: #21368B;
         color: white;
       }
 
       .suggestion-btn:hover {
-        background-color: #AEAFB0;
+        background-color: #1E317D;
       }
 
       .time-in {
@@ -440,8 +440,8 @@
       }
 
       .card-title {
-        background: #C1C2C4;
-        color: white;
+        background: white;
+        color: #21368B;
       }
 
       .task-id {
