removed light blue from infotech

--- a/infotech - department-landing-page.html
+++ b/infotech - department-landing-page.html
@@ -413,19 +413,19 @@
         background-color: #00214D;
       }
       .wrapping .page-content .departments-menu .square {
-          background-color: #A5C5ED;
+          background-color: #1A375F;
           color: white;
       }
       .wrapping .page-content .departments-menu .square:hover{
-        background-color: #95B1D5;
+        background-color: #001E45;
       }
       .suggestion-btn {
-        background-color: #A5C5ED;
+        background-color: #1A375F;
         color: white;
       }
 
       .suggestion-btn:hover {
-        background-color: #95B1D5;
+        background-color: #00214D;
       }
 
       .time-in {
