--- a/infotech - department-page.html
+++ b/infotech - department-page.html
@@ -429,27 +429,27 @@
         color: white;
     }
     .table-head{
-        background-color: #95B1D5;
+        background-color: #1A375F;
     }
     .column .request-title .date{
         color: #00214D;
     }
     .table-head h3 {
-        color: #00214D;
+        color: white;
         font-weight: bold;
     }
     .quick-links h2{
         color: #00214D;
     }
     .blue-box{
-        background-color: #A5C5ED;
+        background-color: #1A375F;
     }
     .announcement-sec{
-        background-color: #95B1D5;
+        background-color: #00214D;
         color: white;
     }
     .announcement-sec h2{
-        color: #00214D;
+        color: white;
     }
     .documents-box a{
         color: #00214D;
