--- a/Sulb - department-landing-page.html
+++ b/Sulb - department-landing-page.html
@@ -85,19 +85,19 @@
                             <h2>newsletter</h2>
                             <img src="./images/constructionworker.jpg" width="100px" height="100px" alt="construction worker">
                         </div>
-                        <div class="grid-box">
+                        <div class="grid-box no-mobile-display">
                             <h2>mission</h2>
                             <div class="message-1">
                                 <p>To be a leading global player in the steel industry with investments spanning the entire steel value chain from "Mine to Metal".</p>
                             </div>
                         </div>
-                        <div class="grid-box">
+                        <div class="grid-box no-mobile-display">
                             <h2>vision</h2>
                             <div class="message-2">
                                 <p>To become the most competitive steel producer in the world through the establishment of a fully integrated manufacturing complex focused on pelletizing through to the manufacturing of finished products at a single site, ensuring continued profitability while providing value for customers.</p>
                             </div>
                         </div>
-                        <div class="grid-box">
+                        <div class="grid-box no-mobile-display">
                             <h2>gallery</h2>
                             <img src="./images/hot-coal.jpeg" width="100px" height="100px" alt="Hot steel">
                         </div>
